--- a/templates/user/login.html
+++ b/templates/user/login.html
@@ -12,7 +12,7 @@
 {% endblock %}
 {% block body %}
 	<div class="login_top clearfix">
-		<a href="../goods/index.html" class="login_logo"><img src="{% static 'images/logo02.png' %}"></a>
+		<a href="/" class="login_logo"><img src="{% static 'images/logo02.png' %}"></a>
 	</div>
 
 	<div class="login_form_bg">
