--- a/templates/user/user_center_info.html
+++ b/templates/user/user_center_info.html
@@ -18,8 +18,8 @@
             {% for goods in goods_list %}
 
             <li>
-                <a href="/goods/detail/{{ goods.id }}"><img src="{{ goods.pic }}"></a>
-                <h4><a href="/goods/detail/{{ goods.id }}">{{ goods.goods_name }}</a></h4>
+                <a href="/goods/detail/{{ goods.id }}/"><img src="{{ goods.pic }}"></a>
+                <h4><a href="/goods/detail/{{ goods.id }}/">{{ goods.goods_name }}</a></h4>
                 <div class="operate">
                     <span class="prize">￥{{ goods.price }}</span>
                     <span class="unit">{{ goods.price }}/{{ goods.unit }}</span>
